--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = ["scipy>=1.14.1"]
 
+[dependency-groups]
+dev = ["nodejs-wheel-binaries>=20.18.0", "pyright>=1.1.386"]
+
 [tool.ruff]
 select = ["ALL"]
 ignore = ["D", "TCH", "PLR0913", "PLC0414"]
