--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ requires-python = ">=3.10"
 dependencies = ["scipy>=1.14.1"]
 
 [dependency-groups]
-dev = ["nodejs-wheel-binaries>=20.18.0", "pyright>=1.1.386"]
+dev = ["nodejs-wheel-binaries>=20.18.0", "pyright>=1.1.386", "pytest>=8.3.3"]
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["D", "TCH", "PLR0913", "PLC0414"]
+ignore = ["D", "TCH", "PLR0913", "PLC0414", "PT001", "PT013"]
 src = ["scipy"]
 line-length = 120
 
