fix: Python 3.12 is only compatible with NumPy 1.26

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,5 +62,5 @@ jobs:
       - name: Install Python
         run: uv python install ${{ matrix.python-version }}
 
-      - name: Run type checker
+      - name: Run test(s)
         run: uv run pytest
