ci/tests: add example and test different profiles

--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -4,7 +4,9 @@ on:
   push:
     paths:
       - .github/workflows/formatter.yml
-      - scipath/
+      - scipath/**
+      - examples/**
+      - tests/**
 
 permissions:
   contents: write
