ci/fix(renovate): add missing comma

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,4 @@
 {
-    "extends": [ "github>winstxnhdw/renovate" ]
+    "extends": [ "github>winstxnhdw/renovate" ],
     "ignoreDeps": ["scipy"],
 }
