--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ requires-python = ">=3.10"
 dev = ["nodejs-wheel-binaries>=22.15.0", "pyright>=1.1.400", "pytest>=8.3.5"]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-root = ""
 
 [tool.ruff]
 line-length = 120
