fix: apply lint changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ module-root = ""
 
 [tool.ruff]
 line-length = 120
+extend-exclude = ["benchmarks/pycubicspline"]
 
 [tool.ruff.lint]
 select = ["ALL"]
