--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
-dependencies = ["scipy>=1.11.0", "scipy>=1.13.0; python_version >= '3.12'"]
+dependencies = ["scipy>=1.9.0"]
 name = "scipath"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 
 [dependency-groups]
-dev = ["nodejs-wheel-binaries>=22.17.1", "pyright>=1.1.403", "pytest>=8.4.1"]
+dev = ["nodejs-wheel-binaries>=22.17.1", "pyright>=1.1.403", "pytest>=8.3.5"]
 
 [build-system]
 requires = ["uv_build"]
