--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,26 @@ jobs:
     uses: winstxnhdw/actions/.github/workflows/uv.yml@main
     with:
       python-version: ${{ matrix.python-version }}
+
+  build:
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, '3.10', 3.11, 3.12, 3.13]
+        runs-on: [ubuntu, windows, macos]
+    runs-on: ${{ matrix.runs-on }}-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.2.2
+        with:
+          show-progress: false
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6.4.1
+        with:
+            python-version: ${{ matrix.python-version }}
+            activate-environment: true
+            cache-dependency-glob: '**/uv.lock'
+
+      - name: Install scipath
+        run: uv pip install .
