--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,10 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10', 3.11, 3.12, 3.13]
+        runs-on: [ubuntu, windows, macos]
 
     uses: winstxnhdw/actions/.github/workflows/uv.yml@main
     with:
+      runs-on: ${{ matrix.runs-on }}-latest
       python-version: ${{ matrix.python-version }}
+      install-project: true
