--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,4 @@
 {
     "extends": [ "github>winstxnhdw/renovate" ],
-    "ignoreDeps": ["python", "scipy"]
+    "ignoreDeps": ["python", "pytest", "scipy"]
 }
