--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ readme = "README.md"
 requires-python = ">=3.10"
 
 [dependency-groups]
-dev = ["nodejs-wheel-binaries>=22.18.0", "pyright>=1.1.405", "pytest>=8.4.1"]
+dev = [
+    "nodejs-wheel-binaries>=22.18.0",
+    "pyright>=1.1.405",
+    "pytest>=8.4.1",
+    "ruff>=0.13.0",
+]
 
 [build-system]
 requires = ["uv_build"]
