ci: enable `recursive-clone`

--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -14,3 +14,5 @@ permissions:
 jobs:
   format:
     uses: winstxnhdw/actions/.github/workflows/format-python.yml@main
+    with:
+      recursive-clone: true
