fix: add default exclusions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ reportUnknownVariableType = false
 reportUnknownMemberType = false
 reportMissingTypeStubs = false
 reportPrivateUsage = false
-exclude = ["benchmarks/pycubicspline"]
+exclude = ["**/node_modules", "**/__pycache__", "**/.*", "benchmarks/pycubicspline"]
 
 [tool.pytest.ini_options]
 norecursedirs = ["benchmarks/pycubicspline"]
