--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
+        python-version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
         runs-on: [ubuntu, windows, macos]
 
     uses: winstxnhdw/actions/.github/workflows/uv.yml@main
