--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-dependencies = ["scipy>=1.10.0", "scipy>=1.11.0; python_version >= '3.9'", "scipy>=1.13.0; python_version >= '3.12'"]
+dependencies = ["scipy>=1.11.0", "scipy>=1.13.0; python_version >= '3.12'"]
 name = "scipath"
 version = "0.1.0"
 description = ""
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
 [dependency-groups]
 dev = ["nodejs-wheel-binaries>=22.20.0", "pyright>=1.1.406", "pytest>=8.3.5", "ruff>=0.14.0"]
@@ -22,7 +22,7 @@ extend-exclude = ["benchmarks/pycubicspline"]
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "INP001", "PLC0414", "PT013"]
+ignore = ["D", "INP001", "PLC0414", "PT013", "TC003"]
 
 [tool.pyright]
 typeCheckingMode = "strict"
