--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,11 @@ jobs:
       recursive-clone: true
       python-version: ${{ matrix.python-version }}
       install-project: true
+
+  complete:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Complete
+        run: echo "All test(s) passed!"
